# generator

./: .gitignore  CMakeLists.txt
include/: __generator.hpp  generator
tests/: CMakeLists.txt  check.hpp  nested_test.cpp  simple_test.cpp
